[feature] Ajustado para método post a foto